test/error/ConstCircular.ci
public static class Test
{
	const int X = Y; //ERROR: Circular dependency in value of constant X
	const int Y = X;
}
